stop clipping off screen

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -8,6 +8,7 @@ body {
 #root {
 	height: 100vh;
 	width: 100vw;
+	overflow: hidden;
 }
 
 .app {
